# RWKZ

./: .gitignore  Cargo.toml  LICENSE  MIGRATION.md  README.md  install.sh
.claude/: CLAUDE.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/build-and-test/: SKILL.md
.claude/skills/compress-decompress/: SKILL.md
.claude/skills/debug-gguf/: SKILL.md
.claude/skills/model-quantization/: SKILL.md
.github/workflows/: release.yml
crates/rwkz_cli/: Cargo.toml
crates/rwkz_cli/src/: main.rs
crates/rwkz_core/: Cargo.toml
crates/rwkz_core/src/: arithmetic.rs  compressor.rs  decompressor.rs  error.rs  format.rs  lib.rs  model.rs  quantized_rwkv_v7.rs  tokenizer.rs
crates/rwkz_core/tests/: e2e.rs  integration.rs
docs/: ARCHITECTURE.md  BENCHMARK.md  BUILDING.md  FORMAT.md  HF_MODEL_CARD.md  QUANTIZATION.md  TEST_REPORT.md
scripts/quantization/: generate_quants.sh
