[workspace]
members = [
    "crates/rwkz_core",
    "crates/rwkz_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
tokenizers = "0.21"
clap = { version = "4", features = ["derive"] }
crc32fast = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
